reconfigured for motion detector + usb cam

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,26 @@ EMAIL_TO=recipient@gmail.com
 # Note: For Gmail, you'll need to use an "App Password" instead of your regular password
 # Enable 2FA on your Google account, then generate an App Password:
 # https://support.google.com/accounts/answer/185833
+
+# ----- PIR + USB Camera Configuration -----
+# BCM pin number for PIR OUT
+PIR_GPIO_PIN=17
+
+# USB camera device id (/dev/videoX). Use -1 to auto-scan 0-5
+CAMERA_DEVICE_ID=0
+
+# Desired resolution for U20CAM-720P
+FRAME_WIDTH=1280
+FRAME_HEIGHT=720
+
+# Use MJPG for faster capture
+USE_MJPG=1
+
+# Delay after PIR triggers before taking photo (seconds)
+CAPTURE_DELAY_AFTER_MOTION=0.6
+
+# Cooldown between motion events (seconds)
+MOTION_COOLDOWN_SECONDS=5
+
+# Save every motion photo even if no cat detected (0/1)
+SAVE_ALL_MOTION_SHOTS=0
