--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 opencv-python==4.8.1.78
 openai==1.3.7
 python-dotenv==1.0.0
+RPi.GPIO; platform_system == 'Linux' and platform_machine in ['armv7l', 'armv6l', 'aarch64']
